<resources>
    <string name="app_name">Social Network Control</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="database_version">1</string>

    <!-- Dash mennu-->
    <string name="menu_entry_state_list">Estados</string>
    <string name="menu_entry_monitoring">Monitoreo</string>


    <!-- Login -->
    <string name="loginTitle">Bienvenido. Por favor Ingresa con tu cuenta de Google</string>

    <!-- Seleccion de RRSS -->
    <string name="select_RRSS_title">Selección de Redes Sociales</string>
    <string name="select_RRSS_subtitle">Selecciona las Redes Sociales que quieres controlar</string>
    <string name="select_RRSS_nextButton">Siguiente</string>
    <string name="title_activity_estados">Estados</string>


    <!-- dialogo estado -->
    <string name="estado_titulo_editar">Editar Estado</string>
    <string name="estado_titulo_crear">Nuevo Estado</string>

    <string name="estado_nombre">Estado</string>
    <string name="estado_mensaje">Mensaje</string>

    <string name="add_estado_title">Agregar Estado</string>
    <string name="add_estado_desc">Ingresa los datos necesarios para crear un nuevo Estado / Mensaje</string>

    <string name="delete_estado_title">Borrar Estado</string>
    <string name="delete_estado_desc">¿Estás seguro de que quieres borrar este Estado?</string>

    <string name="update_estado_title">Actualizar Estado</string>
    <string name="update_estado_desc">Modifica los datos que quieres actualizar</string>
    <string name="title_activity_ajustes">Settings</string>
    <string name="save_btn">Guardar</string>
    <string name="estado_mensaje_editado">Estado Editado.</string>
    <string name="estado_mensaje_creado">Estado Creado</string>


    <!-- Monitoreo -->
    <string name="dash_titulo">Monitoreo</string>
    <string name="dash_option_monitoreo_name">Monitoreo Activo</string>
    <string name="dash_option_estado_name">Estado Activo</string>
    <string name="title_activity_dash">Dash</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="monitoreo_no_disponible">Monitoreo no Disponible</string>

    <string name="rrss_estado_activo">ACTIVO/A</string>
    <string name="rrss_estado_inactivo">INACTIVO/A</string>
    <string name="rrss_desc_estado_activo">La red social funciona sin problemas</string>
    <string name="rrss_desc_estado_inactivo">La red social presenta problemas. Pincha <b>AQUI</b> para mas información.</string>





</resources>
