<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"

        android:layout_margin="15dp"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/estado_nombre"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/estado"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/estado_mensaje"
            app:counterEnabled="true"
            app:counterMaxLength="80"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/mensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/save_btn"
        android:layout_alignParentStart="true"
        android:theme="@style/DefBtn"
        android:id="@+id/guardar" />
</RelativeLayout>