<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_select_rrss"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    tools:context="cl.rubenrojas.socialnetworkcontrol.SelectRRSS">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:layout_above="@+id/next"
        android:layout_alignParentTop="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryText"
            android:textSize="24sp"
            android:textAlignment="center"
            android:text="@string/select_RRSS_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_RRSS_subtitle"
            android:textColor="@color/secondaryText"
            android:layout_marginBottom="15dp"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvRRSS"
            android:layout_width="match_parent"
            android:layout_height="319dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/next"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/select_RRSS_nextButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
