<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_dash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context="cl.rubenrojas.socialnetworkcontrol.Dash">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dash_titulo"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:padding="5dp"
            android:textSize="24dp"
            android:textColor="@color/primaryText"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/dash_option_monitoreo_name"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_weight="50"
                android:textSize="18sp"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:checked="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/dash_option_estado_name"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_weight="50"
                android:textSize="18sp"
                android:layout_height="wrap_content" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/listaEstados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="#000"
                android:layout_below="@+id/textView56"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </LinearLayout>




    </LinearLayout>
</RelativeLayout>
